feat: Add health endpoint (#4)
* Add health endpoint


* Update Makefile

---------
